--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 </head>
 <body>
 </script>
-  <script type="module" src="dist/index.js"></script>
+  <script type="module" src="./dist/index.js"></script>
 </body>
 </html>
